Lab1/ec2/main.tf
resource "aws_instance" "public" {
  ami           = var.ami
  instance_type = var.instance_type
  subnet_id     = var.public_subnet_id
  # Replace group_name with vpc_security_group_ids
  vpc_security_group_ids = [aws_security_group.public_sg.id]
  key_name = var.key_name
  tags = {
    Name = "Group 21 Public EC2 Instance"
  }
}

resource "aws_instance" "private" {
  ami           = var.ami
  instance_type = var.instance_type
  subnet_id     = var.private_subnet_id
  # Replace group_name with vpc_security_group_ids
  vpc_security_group_ids = [aws_security_group.private_sg.id]
  key_name = var.key_name
  tags = {
    Name = "Group 21 Private EC2 Instance"
  }
}

resource "aws_security_group" "public_sg" {
  name        = "public-sg"
  description = "Allow SSH access from a specific IP"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["58.187.185.59/32"]
    # cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  vpc_id = var.vpc_id
  tags = {
    Name = "Group 21 public security group"
  }
}

resource "aws_security_group" "private_sg" {
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    security_groups = [aws_security_group.public_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Group 21 private security"
  }
}
